--- a/tools/ant.html
+++ b/tools/ant.html
@@ -5,14 +5,19 @@
 <title>ant</title>
 
 <style type="text/css">
+    * { padding: 0; margin: 0; }
+    html, body, #fullheight {
+        min-height: 100% !important;
+        height: 100%;
+    }
     body {
         font: 10pt sans;
     }
 
     #mynetwork {
-        width: 1000px;
-        height: 1000px;
-         /* border: 1px solid lightgray; */
+        width: 100%;
+        height: 100%;
+        /*border: 1px solid lightgray;*/
     }
 </style>
 <script type="text/javascript" src="vis.js"></script>
@@ -38,40 +43,13 @@
         edges = [];
         var connectionCount = [];
 
-        // randomly create some nodes and edges
-        for (var i = 0; i < 15; i++) {
-            nodes.push({id: i, label: String(i)});
-        }
-        edges.push({from: 0, to: 1});
-        edges.push({from: 0, to: 6});
-        edges.push({from: 0, to: 13});
-        edges.push({from: 0, to: 11});
-        edges.push({from: 1, to: 2});
-        edges.push({from: 2, to: 3});
-        edges.push({from: 2, to: 4});
-        edges.push({from: 3, to: 5});
-        edges.push({from: 1, to: 10});
-        edges.push({from: 1, to: 7});
-        edges.push({from: 2, to: 8});
-        edges.push({from: 2, to: 9});
-        edges.push({from: 3, to: 14});
-        edges.push({from: 1, to: 12});
-        nodes[0]["level"] = 0;
-        nodes[1]["level"] = 1;
-        nodes[2]["level"] = 3;
-        nodes[3]["level"] = 4;
-        nodes[4]["level"] = 4;
-        nodes[5]["level"] = 5;
-        nodes[6]["level"] = 1;
-        nodes[7]["level"] = 2;
-        nodes[8]["level"] = 4;
-        nodes[9]["level"] = 4;
-        nodes[10]["level"] = 2;
-        nodes[11]["level"] = 1;
-        nodes[12]["level"] = 2;
-        nodes[13]["level"] = 1;
-        nodes[14]["level"] = 5;
-
+        //font: {strokeWidth: 2, strokeColor : '#00ff00'}
+        nodes.push({id:'n0', label:'if', level:0});
+        nodes.push({id:'n1', label:'m', level:1});
+        edges.push({from:"n0", to:"n1", label: 'true'});
+                
+        nodes.push({id:'n2', label:'l', level:1});
+        edges.push({from:"n0", to:"n2", label: 'false'});
 
         // create a network
         var container = document.getElementById('mynetwork');
@@ -81,10 +59,12 @@
         };
 
         var options = {
+            width:"100%",
+            height: "100%",
             edges: {
                 smooth: {
                     type: 'cubicBezier',
-                    forceDirection: (directionInput.value == "UD" || directionInput.value == "DU") ? 'vertical' : 'horizontal',
+                    forceDirection: 'horizontal',
                     roundness: 0.4
                 }
             },
@@ -92,15 +72,16 @@
                 hierarchical: {
                     direction: "LR"
                 }
+                
             },
-            physics:false
+            physics:true
         };
         network = new vis.Network(container, data, options);
 
         // add event listeners
-        network.on('select', function (params) {
-            document.getElementById('selection').innerHTML = 'Selection: ' + params.nodes;
-        });
+//         network.on('select', function (params) {
+//            document.getElementById('selection').innerHTML = 'Selection: ' + params.nodes;
+//         });
     }
 
 </script>
